--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vanilla-starter",
+  "name": "vue-starter",
   "version": "0.0.0",
-  "description": "Javascript + Webpack vanilla starter project",
+  "description": "VueJS starter project",
   "main": "src/index.ts",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.config.js --hot --open",
