--- a/package.json
+++ b/package.json
@@ -59,9 +59,13 @@
     "ts-node": "9.0.0",
     "tsconfigs": "5.0.0",
     "typescript": "4.0.2",
+    "vue-router": "^3.3.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "webpack-merge": "5.1.4"
+  },
+  "dependencies": {
+    "vue": "^2.6.11"
   }
 }
