--- a/package.json
+++ b/package.json
@@ -59,13 +59,15 @@
     "ts-node": "9.0.0",
     "tsconfigs": "5.0.0",
     "typescript": "4.0.2",
-    "vue-router": "^3.3.2",
+    "vue-loader": "15.9.2",
+    "vue-router": "3.3.2",
+    "vue-template-compiler": "2.6.11",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "webpack-merge": "5.1.4"
   },
   "dependencies": {
-    "vue": "^2.6.11"
+    "vue": "2.6.11"
   }
 }
